# Renderer3D

./: CMakeCache.txt  CMakeLists.txt  README.md  Todo  compile_commands.json
.cache/clangd/index/: Color.h.66986E7886FC1B0B.idx  GlfwEnums.h.5B14F33A827AA849.idx  Window.cpp.87AF40D1ACFC9CEA.idx  Window.h.940E4DA462D015D6.idx  WindowFactory.cpp.70718506C029321A.idx  WindowFactory.h.78CA3B2BE025ED22.idx  _fixes.hpp.3C49C58BF3FAEA48.idx  _fixes.hpp.99CF701540CAD988.idx  _matrix_vectorize.hpp.4264A269319DF69D.idx  _matrix_vectorize.hpp.86FED6CFA10D46D5.idx  _noise.hpp.1912D28704D51C83.idx  _noise.hpp.4274CE423CBE0C69.idx  _vectorize.hpp.DF60A180868E72F6.idx  _vectorize.hpp.FBB4456394BE7F86.idx  associated_min_max.hpp.7CDF83ED9F76B7EE.idx  associated_min_max.hpp.FB9B65C96CD2E85D.idx  associated_min_max.inl.84A77C8E978036E3.idx  associated_min_max.inl.9BFD8A74BB8311E5.idx  bit.hpp.13B20CB8A879FC09.idx  bit.hpp.2F9F7E4BFAA1D838.idx  bit.inl.3674D103B57167E1.idx  bit.inl.EA8BD9B37E5258B9.idx  bitfield.hpp.0F49F8018EC21CF7.idx  bitfield.hpp.C9D0E1CBFD73A51E.idx  bitfield.inl.0911E8A15DD441CE.idx  bitfield.inl.4DC0F36A0B0FE02D.idx  closest_point.hpp.3E69F047EC26F6B8.idx  (+917 more)
dependencies/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/glad/src/: glad.c
dependencies/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
dependencies/imgui/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  main.cpp
src/OpenGL-Wrapper/: CMakeLists.txt  Color.h  GlfwEnums.cpp  GlfwEnums.h  Window.cpp  Window.h  WindowFactory.cpp  WindowFactory.h
src/gui/: gui.cpp  gui.h
(+5 files in other folders)
